[gd_scene format=3 uid="uid://caofvcgxsjm08"]

[ext_resource type="Script" uid="uid://dggmn5too71l" path="res://MultiplayerPlayer.tscn.gd" id="1_msdg2"]
[ext_resource type="Texture2D" uid="uid://xcik4np4q0wp" path="res://Alex1.PNG" id="2_uvvwn"]
[ext_resource type="Texture2D" uid="uid://usw45lifaxwc" path="res://Alex2.png" id="3_tl1cy"]
[ext_resource type="Texture2D" uid="uid://dry55q711utak" path="res://Alex3.PNG" id="4_drli4"]
[ext_resource type="Script" uid="uid://bt0yejbkrj6m0" path="res://canvas_layer.gd" id="5_xtp7x"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="6_luswl"]
[ext_resource type="Script" uid="uid://dlrfumt8pw1w1" path="res://WinScreen.gd" id="7_saf70"]
[ext_resource type="Texture2D" uid="uid://dtrjnfeml5uq0" path="res://iconpause.png" id="8_syjbb"]
[ext_resource type="Texture2D" uid="uid://dewnll60bk4nn" path="res://iconrefresh.png" id="9_sbpsj"]
[ext_resource type="Texture2D" uid="uid://dvaxwmbtoa5c" path="res://ExitIcon.png" id="10_itdtg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8h62f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_uvvwn")
}, {
"duration": 1.0,
"texture": ExtResource("3_tl1cy")
}, {
"duration": 1.0,
"texture": ExtResource("4_drli4")
}, {
"duration": 1.0,
"texture": ExtResource("3_tl1cy")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dq2i8"]
radius = 240.0

[sub_resource type="LabelSettings" id="LabelSettings_1jxqw"]
font_size = 20
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_dw050"]
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_b26j0"]
shadow_color = Color(0, 0, 0, 0.9019608)
shadow_offset = Vector2(2, 1)

[sub_resource type="LabelSettings" id="LabelSettings_n7ghd"]
font_size = 20
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="CircleShape2D" id="CircleShape2D_43gkx"]
radius = 53.3333

[node name="MultiplayerPlayer" type="CharacterBody2D" unique_id=165833618 groups=["Player"]]
collision_mask = 522
script = ExtResource("1_msdg2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=837319432]
position = Vector2(2.8000488, 8)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_8h62f")
animation = &"walk"

[node name="Yamnyam-Area2D" type="Area2D" parent="." unique_id=89858094]
position = Vector2(2.8000488, 8)
scale = Vector2(0.3, 0.3)
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Yamnyam-Area2D" unique_id=1195744390]
light_mask = 6
visibility_layer = 512
position = Vector2(26.6667, 0)
scale = Vector2(0.3, 0.3)
shape = SubResource("CircleShape2D_dq2i8")
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="." unique_id=769584778]
visible = false
position = Vector2(25, -40)
position_smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1387815508]
process_mode = 3
script = ExtResource("5_xtp7x")

[node name="SizeLabel" type="Label" parent="CanvasLayer" unique_id=268123692]
light_mask = 0
anchors_preset = 10
anchor_right = 1.0
offset_left = 80.0
offset_right = -4.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Alex ()"
horizontal_alignment = 2
justification_flags = 0
metadata/_edit_use_anchors_ = true

[node name="SizeLabel2" type="Label" parent="CanvasLayer" unique_id=843674139]
light_mask = 0
anchors_preset = 10
anchor_right = 1.0
offset_left = 80.0
offset_top = 24.0
offset_right = -4.0
offset_bottom = 47.0
grow_horizontal = 2
horizontal_alignment = 2
justification_flags = 0
metadata/_edit_use_anchors_ = true

[node name="Virtual joystick left" parent="CanvasLayer" unique_id=1544142048 instance=ExtResource("6_luswl")]
modulate = Color(1, 1, 1, 0.156863)
anchors_preset = -1
anchor_left = -1.167
anchor_top = 0.51900005
anchor_right = -0.187
anchor_bottom = 1.457
offset_left = 1328.384
offset_top = 79.68796
offset_right = 1359.4241
offset_bottom = -304.136
grow_horizontal = 2
size_flags_vertical = 8
pressed_color = Color(0.355313, 0.355314, 0.355314, 1)
deadzone_size = 15.0
clampzone_size = 70.0
joystick_mode = 2
metadata/_edit_use_anchors_ = true

[node name="WinScreen" type="Control" parent="CanvasLayer" unique_id=1397202629]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_saf70")
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="CanvasLayer/WinScreen" unique_id=1032076367]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -112.0
offset_right = 38.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2
text = "Play again?"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="CanvasLayer/WinScreen" unique_id=1694823373]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.24305555
anchor_top = 0.41975307
anchor_right = 0.24305555
anchor_bottom = 0.41975307
offset_left = 216.0
offset_top = -152.0
offset_right = 365.0
offset_bottom = -129.0
label_settings = SubResource("LabelSettings_1jxqw")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer/WinScreen" unique_id=1735377447]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2361111
anchor_top = 0.45679012
anchor_right = 0.2361111
anchor_bottom = 0.45679012
offset_left = 216.0
offset_top = -152.0
offset_right = 365.00012
offset_bottom = -129.0
text = "Congrats! You won!"
label_settings = SubResource("LabelSettings_dw050")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="LoseScreen" type="Control" parent="CanvasLayer" unique_id=372101154]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_saf70")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer/LoseScreen" unique_id=1935464207]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.47916666
anchor_top = 0.45679012
anchor_right = 0.5407986
anchor_bottom = 0.45679012
offset_left = -80.0
offset_top = -152.0
offset_right = 69.0
offset_bottom = -129.0
text = "How can it be? he eat you???"
label_settings = SubResource("LabelSettings_b26j0")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="CanvasLayer/LoseScreen" unique_id=469465243]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -112.0
offset_right = 38.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2
text = "Play again?"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="CanvasLayer/LoseScreen" unique_id=2078623321]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5069444
anchor_top = 0.37037036
anchor_right = 0.5069444
anchor_bottom = 0.37037036
offset_left = -80.0
offset_top = -152.0
offset_right = 69.0
offset_bottom = -129.0
label_settings = SubResource("LabelSettings_n7ghd")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PauseButton" type="Button" parent="CanvasLayer" unique_id=469603219]
offset_left = 80.0
offset_top = 8.0
offset_right = 120.0
offset_bottom = 48.0
focus_mode = 0
icon = ExtResource("8_syjbb")
metadata/_edit_use_anchors_ = true

[node name="RestartButton" type="Button" parent="CanvasLayer" unique_id=315163801]
offset_left = 24.0
offset_top = 8.0
offset_right = 76.0
offset_bottom = 60.0
focus_mode = 0
icon = ExtResource("9_sbpsj")
metadata/_edit_use_anchors_ = true

[node name="SettingsButton" type="Button" parent="CanvasLayer" unique_id=762966083]
offset_left = 136.0
offset_top = 8.0
offset_right = 209.0
offset_bottom = 81.0
scale = Vector2(0.7, 0.7)
focus_mode = 0
icon = ExtResource("10_itdtg")
metadata/_edit_use_anchors_ = true

[node name="PlayerCollisionShape2D" type="CollisionShape2D" parent="." unique_id=1128003433]
light_mask = 8
position = Vector2(10.800049, 8)
scale = Vector2(0.3, 0.3)
shape = SubResource("CircleShape2D_43gkx")

[node name="HeadCircle" type="Polygon2D" parent="." unique_id=718496564]
position = Vector2(8, 8)
color = Color(1, 1, 1, 0.63529414)
polygon = PackedVector2Array(0, -8, 8, 0, 0, 8, -8, 0)

[connection signal="body_entered" from="Yamnyam-Area2D" to="." method="_on_yamnyam_area_2d_body_entered"]
[connection signal="pressed" from="CanvasLayer/WinScreen/Button" to="CanvasLayer/WinScreen" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/LoseScreen/Button" to="CanvasLayer/LoseScreen" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseButton" to="CanvasLayer" method="_on_pause_button_pressed"]
[connection signal="pressed" from="CanvasLayer/RestartButton" to="CanvasLayer" method="_on_restart_button_pressed"]
[connection signal="pressed" from="CanvasLayer/SettingsButton" to="CanvasLayer" method="_on_settings_button_pressed"]
